# opl

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  test.py
src/: axpy.rs  copy.rs  dot.rs  lib.rs  scale.rs  swap.rs  types.rs
